// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TypingMessage matches snapshot with both avatar and sender name 1`] = `
<div>
  <div
    class="flex w-full gap-3 justify-start"
  >
    <div
      class="flex items-end justify-end"
    >
      <div
        data-testid="sender-avatar"
      >
        Avatar
      </div>
    </div>
    <div
      class="flex max-w-[80%] flex-col gap-1 md:max-w-[70%]"
    >
      <div
        class="rounded-r-2xl rounded-tl-2xl border border-[#2979FF]/20 bg-white px-4 py-3"
      >
        <div
          class="flex gap-1"
        >
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.3s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.15s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40"
          />
        </div>
      </div>
      <span
        class="text-xs font-medium text-[#0D1B3E]"
      >
        Paula
      </span>
    </div>
  </div>
</div>
`;

exports[`TypingMessage matches snapshot with default props 1`] = `
<div>
  <div
    class="flex w-full gap-3 justify-start"
  >
    <div
      class="flex max-w-[80%] flex-col gap-1 md:max-w-[70%]"
    >
      <div
        class="rounded-r-2xl rounded-tl-2xl border border-[#2979FF]/20 bg-white px-4 py-3"
      >
        <div
          class="flex gap-1"
        >
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.3s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.15s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypingMessage matches snapshot with sender avatar 1`] = `
<div>
  <div
    class="flex w-full gap-3 justify-start"
  >
    <div
      class="flex items-end justify-end"
    >
      <div
        data-testid="sender-avatar"
      >
        Avatar
      </div>
    </div>
    <div
      class="flex max-w-[80%] flex-col gap-1 md:max-w-[70%]"
    >
      <div
        class="rounded-r-2xl rounded-tl-2xl border border-[#2979FF]/20 bg-white px-4 py-3"
      >
        <div
          class="flex gap-1"
        >
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.3s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.15s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypingMessage matches snapshot with sender name 1`] = `
<div>
  <div
    class="flex w-full gap-3 justify-start"
  >
    <div
      class="flex max-w-[80%] flex-col gap-1 md:max-w-[70%]"
    >
      <div
        class="rounded-r-2xl rounded-tl-2xl border border-[#2979FF]/20 bg-white px-4 py-3"
      >
        <div
          class="flex gap-1"
        >
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.3s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40 [animation-delay:-0.15s]"
          />
          <span
            class="h-2 w-2 animate-bounce rounded-full bg-[#2979FF]/40"
          />
        </div>
      </div>
      <span
        class="text-xs font-medium text-[#0D1B3E]"
      >
        Paula
      </span>
    </div>
  </div>
</div>
`;
